Fix conflicts after rebase main
Signed-off-by: zane-neo <zaniu@amazon.com>